# csim

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  calibration_PSFspc.fits  chris_zoomfft.c  config.h  config.status  configure  configure.ac  configure.scan  contrastCurve.txt  contrast_curve.txt  donutPiaaHexFPMExample.txt  gnuData.txt  gnuplot.txt  gnuplotCommands.txt  hex_positions.txt  hex_positions_fpmIndex.txt  hex_prototype.m  hexdata1.mat  hexdata_olivier_1.mat  hints.txt  libtool  olivierPIAACMC.txt  omptest.c  optimizeDonutPiaaHex.txt  optimizeDonutPiaaHexExample.txt  optimizeDonutPiaaLuvoirHex.txt  optimizeDonutPiaaLuvoirHexFPMatDM.txt  optimizeLuvoir20Rings.txt  optimizeLuvoir8Rings.txt  optimizePIAACMC.txt  pup2lyotIntHexMask.txt  pup2lyotOliverMasks.txt  response_prototype.m  show_csim_opt_data.m  show_csim_opt_values.m  show_dm_optimization_tests.m  (+9 more)
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
csim.xcodeproj/: project.pbxproj
csim.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
csim.xcodeproj/xcuserdata/steve.xcuserdatad/xcschemes/: csim.xcscheme  xcschememanagement.plist
donutPiaaFullCircleExample/3source_2_6/optTest/: bestOptVector.fits  optBestVal.txt  optValHistory.txt
donutPiaaFullCircleExample/3source_2_6/optTest1/: bestOptVector.fits  optBestVal.txt  optValHistory.txt  optimizeDonutPiaaHex.txt
donutPiaaFullCircleExample/3source_2_6/responseData/: problemParams.txt  responseParams.txt
donutPiaaFullCircleExample/mono_2_6/optTest/: bestOptVector.fits  optBestVal.txt  optimizeDonutPiaaHex.txt
donutPiaaFullCircleExample/mono_2_6/optTest1/: optValHistory.txt
donutPiaaFullCircleExample/mono_2_6/responseData/: problemParams.txt  responseData_s0_p0_im.fits  responseData_s0_p0_re.fits  responseParams.txt
donutPiaaFullCircleExample/poly_2_6/optTest/: optBestVal.txt  optValHistory.txt
donutPiaaFullCircleExample/poly_2_6/optTest1/: bestOptVector.fits  optBestVal.txt  optValHistory.txt
donutPiaaFullCircleExample/poly_2_6/optTest2/: bestOptVector.fits
donutPiaaFullCircleExample/poly_2_6/responseData/: donutPiaaHexFPM.txt  problemParams.txt  responseParams.txt
gitDir/: COMMIT_EDITMSG  index
gitDir/logs/: HEAD
gitDir/refs/heads/: master
src/: Makefile.am  Makefile_gpu.am  Makefile_no_gpu.am  csim.cpp  csim.hpp  test.cpp  test.hpp
src/coronagraph/: Makefile.am  coronagraph.cpp  coronagraph.hpp
src/data/: Makefile.am  efield.cpp  efield.hpp  responseData.cpp  responseData.hpp
src/efield/: Makefile.am  efield.cpp
src/elements/: Makefile.am  breakExecution.cpp  breakExecution.hpp  celem.cpp  celem.hpp  cfmResponse.cpp  cfmResponse.hpp  complexHexMaskFPM.cpp  complexHexMaskFPM.hpp  complexMask.cpp  complexMask.hpp  deformableMirror.cpp  deformableMirror.hpp  doubleFraunhoferFPM.cpp  doubleFraunhoferFPM.hpp  doubleFraunhoferInterpFPM.cpp  doubleFraunhoferInterpFPM.hpp  downsample.cpp  downsample.hpp  fpmPupToLyot.cpp  fpmPupToLyot.hpp  fraunhoferFocal.cpp  fraunhoferFocal.hpp  fresnelPropagator.cpp  fresnelPropagator.hpp  mask.cpp  mask.hpp  mirror.cpp  mirror.hpp  upsample.cpp  upsample.hpp  zoomDftPropagator.cpp  zoomDftPropagator.hpp  zoomFftPropagator.cpp  zoomFftPropagator.hpp
src/lib/: Makefile.am  csim_fft.cpp  csim_fft.hpp  csim_fits.cpp  csim_fits.hpp  csim_geom.cpp  csim_geom.hpp  csim_lib.hpp  csim_parser.cpp  csim_parser.hpp  csim_plot.cpp  csim_plot.hpp  csim_utils.cpp  csim_utils.hpp
src/optimization/: Makefile.am  linearOptimizer.cpp  linearOptimizer.hpp  nloptOptimizer.cpp  nloptOptimizer.hpp  optObjective.cpp  optObjective.hpp
src/optimization/differentialEvolution/: deStrategy.cpp  deStrategy.hpp  differentialEvolutionOptimizer.cpp  differentialEvolutionOptimizer.hpp
src/telescope/: Makefile.am  telescope.cpp  telescope.hpp
src/tools/: Makefile.am  contrastCurve.cpp  contrastCurve.hpp  makeHexCFpmResponse.cpp  makeHexCFpmResponse.hpp  regionContrast.cpp  regionContrast.hpp
