AC_INIT([csim], [0.0], [steve.bryson@nasa.gov])
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
AM_PROG_AR
LT_INIT
AC_CONFIG_MACRO_DIRS([m4])
AC_PROG_CXX([g++-mp-6])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
Makefile
src/Makefile
src/lib/Makefile
src/coronagraph/Makefile
src/efield/Makefile
src/elements/Makefile
src/telescope/Makefile
src/tools/Makefile
])
AC_OUTPUT
