noinst_LTLIBRARIES = libelements.la
libelements_la_SOURCES = breakExecution.cpp celem.cpp mask.cpp mirror.cpp mirror.cpp \
    fresnelPropagator.cpp fraunhoferFocal.cpp doubleFraunhoferFPM.cpp fpmPupToLyot.cpp \
    zoomDftPropagator.cpp zoomFftPropagator.cpp complexMask.cpp complexHexMaskFPM.cpp \
    doubleFraunhoferInterpFPM.cpp
libelements_la_CPPFLAGS = -I/Users/steve/programming_projects/gnu/armadillo-7.800.1/include \
-I/Users/steve/programming_projects/gnu/cfitsio/include
