noinst_LTLIBRARIES = libelements.la
libelements_la_SOURCES = breakExecution.cpp celem.cpp mask.cpp mirror.cpp deformableMirror.cpp \
    fresnelPropagator.cpp fraunhoferFocal.cpp doubleFraunhoferFPM.cpp fpmPupToLyot.cpp \
    zoomDftPropagator.cpp zoomFftPropagator.cpp complexMask.cpp complexHexMaskFPM.cpp \
    doubleFraunhoferInterpFPM.cpp upsample.cpp downsample.cpp
libelements_la_CPPFLAGS = -I$(MY_LIBDIR)/armadillo-8.500.1/include \
-I$(MY_LIBDIR)/cfitsio/include
