noinst_LTLIBRARIES = libcsim.la
libcsim_la_SOURCES = csim_parser.cpp csim_fits.cpp csim_fft.cpp csim_geom.cpp csim_plot.cpp
libcsim_la_CPPFLAGS = -I/Users/steve/programming_projects/gnu/armadillo-7.800.1/include \
-I/Users/steve/programming_projects/gnu/cfitsio/include \
-I/Users/steve/programming_projects/gnu/fftw-3.3.7/include \
-I/Users/steve/programming_projects/gnu/armadillo-7.800.1/include
