noinst_LTLIBRARIES = libcsim.la
libcsim_la_SOURCES = csim_parser.cpp csim_fits.cpp csim_fft.cpp csim_geom.cpp csim_plot.cpp csim_utils.cpp
libcsim_la_CPPFLAGS = -I$(MY_LIBDIR)/armadillo-8.500.1/include \
-I$(MY_LIBDIR)/cfitsio/include \
-I$(MY_LIBDIR)/fftw-3.3.7/include \
-I$(MY_LIBDIR)/armadillo-7.800.1/include
