noinst_LTLIBRARIES = liboptimization.la
liboptimization_la_SOURCES = optObjective.cpp differentialEvolution/deStrategy.cpp differentialEvolution/differentialEvolutionOptimizer.cpp
liboptimization_la_CPPFLAGS = -I/Users/steve/programming_projects/gnu/armadillo-7.800.1/include \
-I/Users/steve/programming_projects/gnu/cfitsio/include
