noinst_LTLIBRARIES = liboptimization.la
liboptimization_la_SOURCES = optObjective.cpp differentialEvolution/deStrategy.cpp differentialEvolution/differentialEvolutionOptimizer.cpp nloptOptimizer.cpp linearOptimizer.cpp
liboptimization_la_CPPFLAGS = -I$(MY_LIBDIR)/armadillo-8.500.1/include \
-I$(MY_LIBDIR)/cfitsio/include \
-I$(MY_LIBDIR)/nlopt-2.5.0/build/include

